# qrforge

./: .gitignore  Cargo.toml  LICENSE  README.md  combine_image.py
examples/: qrgen_image.rs  qrgen_svg.rs
src/: color.rs  constants.rs  correction.rs  correction_interleave.rs  encode.rs  enums.rs  error.rs  image.rs  interleave.rs  lib.rs  main.rs  matrix_builder.rs  matrix_builder_micro.rs  mode_selector.rs  qrcode.rs  qrcode_builder.rs  svg.rs  tests.rs  utils.rs
