[package]
name = "QRcode"
version = "0.1.0"
edition = "2021"

[lib]
# Adjust the library entry point if necessary.
name = "qrcode"
path = "src/lib.rs"

[dependencies]
lazy_static = "1.5.0"
image = { version = "0.25.5", optional = true }
rayon = { version = "1.10.0", optional = true }

[features]
parallel = ["dep:rayon"]
svg = []
image = ["dep:image"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3