[package]
name = "qrforge"
version = "0.1.1"
authors = ["Jacco te Poel <jacco@tepoel.net>"]
repository = "https://github.com/J-a-c-c-o/qrforge"
description = "A QR code generator written in Rust"
edition = "2021"
keywords = ["qr", "qrcode", "rust", "structured-append", "micro-qrcode"]
license = "MIT"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
image = { version = "0.25.5", optional = true }
rayon = { version = "1.10.0", optional = true }

[features]
parallel = ["dep:rayon"]
svg = []
image = ["dep:image"]

[[bin]]
name = "qrgen"
features = ["parallel"]

[[example]]
path = "examples/qrgen_image.rs"
name = "qrgen_image"
required-features = ["image"]

[[example]]
path = "examples/qrgen_svg.rs"
name = "qrgen_svg"
required-features = ["svg"]